--- a/templates/layout3.html
+++ b/templates/layout3.html
@@ -13,10 +13,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Speech_bubble.svg/2560px-Speech_bubble.svg.png" width="30" height="30" alt="">
                 </a>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/home/{{username}}">View Posts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/add/{{username}}">Add Confession</a>
+                    <a class="nav-link text-white" href="/staff/{{username}}">View Posts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/redress/{{username}}">Redress Confession</a>
