--- a/templates/redress.html
+++ b/templates/redress.html
@@ -10,12 +10,24 @@
     {% for key, value in postinfo.items() %}
     <div class="card border - secondary mb-3" style="max-width: 30rem;">
         <div class="card-body">
-                <h5 class="card-title">{{key}}</h5>
-                <p class="card-text">{{value}}</p>
+            <h5 class="card-title">{{value.get("Title")}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{value.get("Likes")}} Likes</h6>
+            <p class="card-text">{{value.get("Text")}}</p>
+            {% if value.get("Redressal")|length %}
+            <h6 class="card-subtitle mb-2 text-muted">Redressed </h6>
+            {% else %}
+            <form action = "" method = post>
+                <input type="hidden" name="id" value={{value.get("id")}}>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">My Redressal</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" name = 'redressal' rows="3"></textarea>
+                </div>
+                <input class="btn btn-default" type="submit" value="Submit Redressal">
+            </form>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
-    <a class="btn btn-primary" href="/add/{{username}}" role="button">Add Confession</a>
     <a class="btn btn-primary" href="/redress/{{username}}" role="button">Redress Confession</a>
 </div>
 
