--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     class = "rounded float-start ml-2" style="max-width:50%;">
 </div>
 <div class = "container ml-3 pt-4">
-    <h4> Welcome to NTU's secure and anonymous confession site! </h4>
+    <h4> "TELLNTU": Welcome to NTU's secure and anonymous confession site! </h4>
     <h6> Login to begin: </h6>
         <ul>
             <li><a href=/register> I am a New User! </a></li>
