--- a/templates/redress.html
+++ b/templates/redress.html
@@ -12,7 +12,7 @@
         <div class="alert alert-danger mt-1" role="alert">
             There are {{pendingredressals}} PENDING confessions.
         </div>
-    {% elseif pendingredressals|int>0 %}
+    {% elif pendingredressals|int>0 %}
         <div class="alert alert-danger mt-1" role="alert">
             There is {{pendingredressals}} PENDING confession.
         </div>
