--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
           <input type="password" class="form-control" id="inputPassword" placeholder="Password" name = "pw2" value = {{request.form.pw2}}>
         </div>
       </div>
-      <input class="btn btn-default" type="submit" value="Login">
+      <input class="btn btn-default" type="submit" value="Register">
     </form>
     {% if error %}
       <p class="error"><strong>Alert:</strong> {{ error }}
